Fix images without 3 characters not showing up

--- a/pokemon.css
+++ b/pokemon.css
@@ -1,4 +1,104 @@
-
+[class*=i0],.i100{background-image: url(data/pokemon-0.jpg);background-size: 1000px 1000px;}
+.i001{background-position: -100px -0px;}
+.i002{background-position: -700px -100px;}
+.i003{background-position: -0px -100px;}
+.i004{background-position: -100px -100px;}
+.i005{background-position: -200px -0px;}
+.i006{background-position: -200px -100px;}
+.i007{background-position: -0px -200px;}
+.i008{background-position: -100px -200px;}
+.i009{background-position: -200px -200px;}
+.i010{background-position: -300px -0px;}
+.i011{background-position: -300px -100px;}
+.i012{background-position: -300px -200px;}
+.i013{background-position: -0px -300px;}
+.i014{background-position: -100px -300px;}
+.i015{background-position: -200px -300px;}
+.i016{background-position: -300px -300px;}
+.i017{background-position: -400px -0px;}
+.i018{background-position: -400px -100px;}
+.i019{background-position: -400px -200px;}
+.i020{background-position: -400px -300px;}
+.i021{background-position: -0px -400px;}
+.i022{background-position: -100px -400px;}
+.i023{background-position: -200px -400px;}
+.i024{background-position: -300px -400px;}
+.i025{background-position: -400px -400px;}
+.i026{background-position: -500px -0px;}
+.i027{background-position: -500px -100px;}
+.i028{background-position: -500px -200px;}
+.i029{background-position: -500px -300px;}
+.i030{background-position: -500px -400px;}
+.i031{background-position: -0px -500px;}
+.i032{background-position: -100px -500px;}
+.i033{background-position: -200px -500px;}
+.i034{background-position: -300px -500px;}
+.i035{background-position: -400px -500px;}
+.i036{background-position: -500px -500px;}
+.i037{background-position: -600px -0px;}
+.i038{background-position: -600px -100px;}
+.i039{background-position: -600px -200px;}
+.i040{background-position: -600px -300px;}
+.i041{background-position: -600px -400px;}
+.i042{background-position: -600px -500px;}
+.i043{background-position: -0px -600px;}
+.i044{background-position: -100px -600px;}
+.i045{background-position: -200px -600px;}
+.i046{background-position: -300px -600px;}
+.i047{background-position: -400px -600px;}
+.i048{background-position: -500px -600px;}
+.i049{background-position: -600px -600px;}
+.i050{background-position: -700px -0px;}
+.i051{background-position: -0px -0px;}
+.i052{background-position: -700px -200px;}
+.i053{background-position: -700px -300px;}
+.i054{background-position: -700px -400px;}
+.i055{background-position: -700px -500px;}
+.i056{background-position: -700px -600px;}
+.i057{background-position: -0px -700px;}
+.i058{background-position: -100px -700px;}
+.i059{background-position: -200px -700px;}
+.i060{background-position: -300px -700px;}
+.i061{background-position: -400px -700px;}
+.i062{background-position: -500px -700px;}
+.i063{background-position: -600px -700px;}
+.i064{background-position: -700px -700px;}
+.i065{background-position: -800px -0px;}
+.i066{background-position: -800px -100px;}
+.i067{background-position: -800px -200px;}
+.i068{background-position: -800px -300px;}
+.i069{background-position: -800px -400px;}
+.i070{background-position: -800px -500px;}
+.i071{background-position: -800px -600px;}
+.i072{background-position: -800px -700px;}
+.i073{background-position: -0px -800px;}
+.i074{background-position: -100px -800px;}
+.i075{background-position: -200px -800px;}
+.i076{background-position: -300px -800px;}
+.i077{background-position: -400px -800px;}
+.i078{background-position: -500px -800px;}
+.i079{background-position: -600px -800px;}
+.i080{background-position: -700px -800px;}
+.i081{background-position: -800px -800px;}
+.i082{background-position: -900px -0px;}
+.i083{background-position: -900px -100px;}
+.i084{background-position: -900px -200px;}
+.i085{background-position: -900px -300px;}
+.i086{background-position: -900px -400px;}
+.i087{background-position: -900px -500px;}
+.i088{background-position: -900px -600px;}
+.i089{background-position: -900px -700px;}
+.i090{background-position: -900px -800px;}
+.i091{background-position: -0px -900px;}
+.i092{background-position: -100px -900px;}
+.i093{background-position: -200px -900px;}
+.i094{background-position: -300px -900px;}
+.i095{background-position: -400px -900px;}
+.i096{background-position: -500px -900px;}
+.i097{background-position: -600px -900px;}
+.i098{background-position: -700px -900px;}
+.i099{background-position: -800px -900px;}
+.i100{background-position: -900px -900px;}
 [class*=i1]:not(.i100),.i200{background-image: url(data/pokemon-1.jpg);background-size: 1000px 1000px;}
 .i101{background-position: -100px -0px;}
 .i102{background-position: -700px -100px;}
